[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {"version" = "1.0", features = ["full"]}
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-pemfile = "2.1.3"
tokio-rustls = "0.26.0"
webpki-roots = "0.26.3"
